@@ -6,7 +6,7 @@
  parentproxyport="8000"
  timeout="30"
  obfuscateip="0"
- debuglevel="0"
+ debuglevel="4"
  showerrors="0"
  noproxyfor="localhost,127.0.0.1"
 >
