@@ -1,8 +1,9 @@
 webcleaner (0.25) unstable; urgency=low
 
   * wcheaders: scrolling fix
+  * flush data if server is closed
 
- -- Bastian Kleineidam <calvin@debian.org>  Tue, 13 Nov 2001 13:34:22 +0100
+ -- Bastian Kleineidam <calvin@debian.org>  Thu, 15 Nov 2001 14:32:14 +0100
 
 webcleaner (0.24) unstable; urgency=low
 
